# esp-openclaw-node

.github/workflows/: ci.yml
components/esp-openclaw-node/src/: esp_openclaw_node_protocol.c
examples/: README.md
examples/esp-stickc/: CMakeLists.txt  Kconfig.projbuild  README.md  partitions.csv  sdkconfig.defaults
examples/esp-stickc/main/: CMakeLists.txt  app_main.c  esp_openclaw_node_stickc_cmd.c  esp_openclaw_node_stickc_cmd.h  esp_openclaw_node_stickc_display.c  esp_openclaw_node_stickc_display.h  esp_openclaw_node_stickc_display_node_cmd.c  esp_openclaw_node_stickc_display_node_cmd.h  esp_openclaw_node_stickc_hw_node_cmd.c  esp_openclaw_node_stickc_hw_node_cmd.h  idf_component.yml
